# rocket-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
nccbot/: manage.py
nccbot/nccbot/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nccbot/sender/: admin.py  tasks.py
nccbot/sender/management/commands/: send.py
nccbot/sender/migrations/: 0001_initial.py  0002_alter_botsetting_options.py
sender/: admin.py  classes.py  models.py  tasks.py
sender/management/commands/: test.py
sender/migrations/: 0003_niconsurname.py  0004_botsetting_blue_botsetting_interval.py  0005_botsetting_col_number_for_nic.py
