[tool.poetry]
name = "rocket-bot"
version = "0.1.0"
description = ""
authors = ["kot <bafomet2016vitt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.4"
openpyxl = "^3.1.2"
rocketchat-API = "^1.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
